--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: none;
 }
-body { margin: 0; font-size: 14px; line-height: 1.61; font-weight: 400; font-family: 'Open Sans', sans-serif; color: #333;}
 
 
 a { color: #12C; }
@@ -27,27 +26,14 @@ a:visited { color: #61C; }
 a:focus { outline: thin dotted; }
 a:hover, a:active { color: #c00; outline: 0; }
 
-img { border: 0; max-width: 100%; }
-
-
-header, footer, .container { max-width: 45em; margin: 0 auto; }
-
-
 .hero { padding: 2em; background-color: #f8f8f8; font-size:1.2em;
   border-bottom: 1px solid #ccc;
   border-top: 1px solid #ccc;
 }
 
-.content { padding: 1em 1em; }
-.content li { list-style-type: none; font-size: 1.1em;}
+li { list-style-type: none; font-size: 1.1em;}
 li img { float:left; padding-right: 1em; }
 li p { font-size: 0.9em; font-style: italic; }
-
-footer {
-  padding: 0 0.5em;
-  border-top: 1px solid #ccc;
-}
-footer span { float: right; font-style: italic; }
 
 /* Smartphones (portrait) */
 @media only screen and (max-width: 480px) {
